src/objects/UI_Participant__c.object
<CustomObject>
    <description>A User Involvement Participant with Consent</description>
    <fields>
        <fullName>Activity_Types__c</fullName>
        <inlineHelpText>Types of Activity for which the Participant has given consent to be Involved</inlineHelpText>
        <label>Activity Types</label>
        <picklist>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Areas_Of_Expertise__c</fullName>
        <inlineHelpText>Types of Activity where this Participant can provide particularly relevant skills or experience</inlineHelpText>
        <label>Areas Of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Any comments or other information which may be of use</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Type__c</fullName>
        <inlineHelpText>In what form was Consent given?</inlineHelpText>
        <label>Consent Type</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This has to be look-up, not a Master-Detail so that anyone can own a Participant, regardless of the Contact Owner.</description>
        <inlineHelpText>The CRS Person record for this Participant. You may have limited access to data on the Person Profile</inlineHelpText>
        <label>Person Record</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Records</relationshipLabel>
        <relationshipName>User_Involvement_Participant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_of_Consent_Form__c</fullName>
        <description>Where is the consent form physically located</description>
        <inlineHelpText>Where is the consent form physically located</inlineHelpText>
        <label>Location of Consent Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methods_of_Involvement__c</fullName>
        <inlineHelpText>Methods of Involvement for which the Participant has given Involvement Consent</inlineHelpText>
        <label>Methods of Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Group Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Group</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Participant_Reference__c</fullName>
        <displayFormat>UIP-{0000}</displayFormat>
        <inlineHelpText>A unique reference number for this Participant (different to their Person reference)</inlineHelpText>
        <label>Participant Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Participation_Count__c</fullName>
        <inlineHelpText>The number of separate times this Participant has been Involved in an Activity</inlineHelpText>
        <label>Participation Count</label>
        <summaryForeignKey>UI_Activity_Participation__c.UI_Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Person is an active service user at the point they are set to Active, and the current user is not a CRS user with access to the Person record then 
approval will be requested from the Service Usage primary contact</description>
        <inlineHelpText>If this Person is an active service user, and you do not already have access to their personal details, then approval will be requested from their current Primary Service Usage Assigned Worker.</inlineHelpText>
        <label>Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SU_EPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Engagement and Participation Officer for the Region associated with the most recent Service Usage. This is used by the work flow approval.</description>
        <inlineHelpText>The Engagement and Participation Officer for the Region associated with the most recent Service Usage. This is used by the work flow approval.</inlineHelpText>
        <label>Engagement and Participation Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SU_Participant_EPO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SU_SSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Services Manager for the most recently used Service Usage. 
Computed in by the trigger, used in the approval workflow.</description>
        <inlineHelpText>The Services Manager for the most recently used Service Usage. 
Computed in by the trigger, used in the approval workflow.</inlineHelpText>
        <label>SU Services Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UI_Participant_SSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Society_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the primary contact for this Participant inside the Society</inlineHelpText>
        <label>Society Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_For_UI_Consents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the Participant</description>
        <inlineHelpText>The current status of Participant.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <description>The date the consent is valid to be used</description>
        <inlineHelpText>Date Consent is valid from</inlineHelpText>
        <label>Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <description>The date the consent should be reviewed. Participation should not be considered if this date is passed and not updated.</description>
        <inlineHelpText>The date the consent should be reviewed. Participation should not be considered if this date is passed and not continued consent has not be confirmed.</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <label>User Involvement Participant</label>
    <listViews>
        <fullName>Active_Participants</fullName>
        <columns>NAME</columns>
        <columns>Valid_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Valid</value>
        </filters>
        <label>Active Participants</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Activity_Types__c</columns>
        <columns>Valid_From_Date__c</columns>
        <columns>Valid_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expired_Participants</fullName>
        <columns>NAME</columns>
        <columns>Valid_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired Participants</label>
    </listViews>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>UI_Consent_Review_Date_Not_Passed</fullName>
        <active>true</active>
        <description>Ensures that Valid status cannot be set for Participation where Valid From is in the past and Valid To is in the Future.</description>
        <errorConditionFormula>AND ( 
     NOT( $User.IgnoreValidationRules__c ), 
     Or ( 
          ISPICKVAL(Status__c,&apos;Active&apos;),
          ISPICKVAL(Status__c,&apos;Pending Approval&apos;)
        ),    
     OR(
        ISBLANK(Valid_From_Date__c),
        Valid_From_Date__c &gt; TODAY(),
        Valid_From_Date__c &lt; TODAY()-180, 
        ISPICKVAL(Consent_Type__c,&quot;&quot;) 
     )
)</errorConditionFormula>
        <errorMessage>Participants must have a valid Consent to participate in Society activities. Please check Status is valid and the review date has not been exceeded.</errorMessage>
    </validationRules>
</CustomObject>